Changed the place of reference to the iotcrafter repo - use a separate file instead of main sources.list (for the same behaviour of iotc_init.sh on boards of different types)

--- a/configs/iotcrafter-debian-jessie-bbb-v4.4.conf
+++ b/configs/iotcrafter-debian-jessie-bbb-v4.4.conf
@@ -175,10 +175,10 @@ chroot_script="iotcrafter-jessie.sh"
 chroot_post_uenv_txt=""
 chroot_tarball="enable"
 
-repo_external="enable"
-repo_external_arch="armhf"
-repo_external_server="http://www.iotcrafter.com:8888/bbb/ armhf/"
+#repo_external="enable"
+#repo_external_arch="armhf"
+#repo_external_server="http://www.iotcrafter.com:8888/bbb/ armhf/"
 #repo_external_dist=""
 #repo_external_components=""
 #repo_external_key=""
-repo_external_pkg_list=""
+#repo_external_pkg_list=""
