--- a/configs/iotcrafter-debian-jessie-v4.4.conf
+++ b/configs/iotcrafter-debian-jessie-v4.4.conf
@@ -172,10 +172,11 @@ chroot_script="iotcrafter-jessie.sh"
 chroot_post_uenv_txt=""
 chroot_tarball="enable"
 
-repo_external="enable"
-repo_external_arch="armhf,all"
-repo_external_server="http://iotcrafter.com:8888/iotc/bbb"
-repo_external_dist="jessie"
-repo_external_components="main"
+# moved to chroot script, so iotc_init.sh will work the same as on RPI
+#repo_external="enable"
+#repo_external_arch="armhf,all"
+#repo_external_server="http://iotcrafter.com:8888/iotc/bbb"
+#repo_external_dist="jessie"
+#repo_external_components="main"
 #repo_external_key=""
-repo_external_pkg_list=""
+#repo_external_pkg_list=""
