Updated jessie v4.4 configs, updated docker build script (like the one for other BS)

--- a/configs/iotcrafter-debian-jessie-v4.4.conf
+++ b/configs/iotcrafter-debian-jessie-v4.4.conf
@@ -1,13 +1,13 @@
 ##
-release="8.9"
+release="8.10"
 image_type="iotcrafter"
+#image_type="iotcrafter-bbb"
+#image_type="iotcrafter-bbgw"
 ##
 ##Debootstrap: https://wiki.debian.org/Debootstrap
 ##
 ##debootstrap --arch=${deb_arch} --include=${deb_include} --exclude=${deb_exclude} \
 ##--components=${deb_components} --foreign ${deb_codename} /tmp/tmp.dir/ http://${deb_mirror}
-##
-##Debian Jessie armhf
 ##
 deb_distribution="debian"
 deb_codename="jessie"
@@ -53,10 +53,10 @@ deb_include="	\
 	initramfs-tools	\
 	iperf	\
 	iw	\
+	libdbus-1-dev	\
 	libncurses5-dev	\
 	libnss-mdns	\
 	libtool	\
-	libdbus-1-dev	\
 	libusb-1.0-0-dev	\
 	linux-base	\
 	locales	\
@@ -86,7 +86,6 @@ deb_include="	\
 	wpasupplicant	\
 	wvdial	\
 	xz-utils	\
-	mc	\
 	parted	\
 	unzip \
 "
@@ -102,6 +101,7 @@ deb_mirror=""
 #python-2.7: due to: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=769106
 #
 deb_additional_pkgs="	\
+	libpam-systemd	\
 	libpython2.7-dev	\
 	lsb-release	\
 	mpg123	\
@@ -148,7 +148,7 @@ repo_rcnee_pkg_list="	\
 	libiio-utils	\
 	libsoc-dev	\
 	libsoc2	\
-	linux-image-4.4.88-ti-r125	\
+	linux-image-4.4.113-ti-r148	\
 	mjpg-streamer	\
 	pru-software-support-package	\
 	rcn-ee-archive-keyring	\
@@ -167,7 +167,7 @@ repo_nodesource="node_4.x"
 #repo_nodesource="node_8.x"
 repo_nodesource_dist="jessie"
 ##
-repo_rcnee_pkg_version="4.4.88-ti-r125"
+repo_rcnee_pkg_version="4.4.113-ti-r148"
 include_firmware="enable"
 #
 chroot_COPY_SETUP_SDCARD="enable"
