Added building of IOTC kernel modules, building overlays instead of using binaries; specified respective configuration variables

--- a/configs/iotcrafter-debian-jessie-v4.4.conf
+++ b/configs/iotcrafter-debian-jessie-v4.4.conf
@@ -185,3 +185,11 @@ chroot_tarball="enable"
 #repo_external_components="main"
 #repo_external_key=""
 #repo_external_pkg_list=""
+
+#IOTC specific-vars
+#iotc_modules="DHT HCSR04 dht11"
+iotc_modules="HCSR04"
+#iotc_repo_DHT="https://github.com/softerra/DHT22-sensor-driver.git"
+#iotc_repo_DHT_REV=
+iotc_repo_HCSR04="https://github.com/softerra/linux-hc-sro4.git"
+iotc_repo_HCSR04_REV=f4a5dd34b50ad4e19af4d445c132fb72b6682a27
