Fixed permissions for stretch chroot script, disabled u-boot  overlays; restored use of capemgr service for strecth (and buster)

--- a/configs/iotcrafter-debian-stretch-v4.14.conf
+++ b/configs/iotcrafter-debian-stretch-v4.14.conf
@@ -168,7 +168,7 @@ repo_rcnee_pkg_version="4.14.24-ti-r37"
 include_firmware="enable"
 #
 chroot_COPY_SETUP_SDCARD="enable"
-chroot_before_hook=""
+chroot_before_hook="chroot_before_hook"
 chroot_after_hook="chroot_after_hook"
 chroot_script="iotcrafter-stretch.sh"
 chroot_post_uenv_txt=""
