--- a/configs/iotcrafter-debian-stretch-v4.9.conf
+++ b/configs/iotcrafter-debian-stretch-v4.9.conf
@@ -168,7 +168,7 @@ repo_rcnee_pkg_version="4.9.83-ti-r103"
 include_firmware="enable"
 #
 chroot_COPY_SETUP_SDCARD="enable"
-chroot_before_hook=""
+chroot_before_hook="chroot_before_hook"
 chroot_after_hook="chroot_after_hook"
 chroot_script="iotcrafter-stretch.sh"
 chroot_post_uenv_txt=""
