Updated iotcrafter build files

--- a/configs/iotcrafter-debian-stretch-v4.14.conf
+++ b/configs/iotcrafter-debian-stretch-v4.14.conf
@@ -1,5 +1,5 @@
 ##
-release="9.3"
+release="9.4"
 image_type="iotcrafter"
 #image_type="iotcrafter-bbb"
 #image_type="iotcrafter-bbgw"
@@ -73,6 +73,7 @@ deb_include="	\
 	pastebinit	\
 	pkg-config	\
 	ppp	\
+	pps-tools	\
 	python-dev	\
 	python3	\
 	python3-dev	\
@@ -144,7 +145,7 @@ repo_rcnee_pkg_list="	\
 	firmware-am57xx-opencl-monitor	\
 	gpiod	\
 	ipumm-dra7xx-installer	\
-	linux-image-4.14.24-ti-r37	\
+	linux-image-4.14.35-ti-r44	\
 	mjpg-streamer	\
 	pru-software-support-package	\
 	rcn-ee-archive-keyring	\
@@ -164,7 +165,7 @@ repo_nodesource="node_6.x"
 #repo_nodesource="node_8.x"
 repo_nodesource_dist="stretch"
 ##
-repo_rcnee_pkg_version="4.14.24-ti-r37"
+repo_rcnee_pkg_version="4.14.35-ti-r44"
 include_firmware="enable"
 #
 chroot_COPY_SETUP_SDCARD="enable"
