Try with roboticscape

--- a/configs/iotcrafter-debian-jessie-v4.4.conf
+++ b/configs/iotcrafter-debian-jessie-v4.4.conf
@@ -152,6 +152,7 @@ repo_rcnee_pkg_list="	\
 	mjpg-streamer	\
 	pru-software-support-package	\
 	rcn-ee-archive-keyring	\
+	roboticscape	\
 	ti-pru-cgt-installer	\
 	ti-wlconf	\
 	tiomapconf	\
