--- a/configs/iotcrafter-debian-stretch-v4.14.conf
+++ b/configs/iotcrafter-debian-stretch-v4.14.conf
@@ -149,6 +149,7 @@ repo_rcnee_pkg_list="	\
 	mjpg-streamer	\
 	pru-software-support-package	\
 	rcn-ee-archive-keyring	\
+	roboticscape	\
 	ti-pru-cgt-installer	\
 	tiomapconf	\
 	vpdma-dra7xx-installer	\
